--- a/example/course-resources/fork/levels-index.yaml
+++ b/example/course-resources/fork/levels-index.yaml
@@ -5,6 +5,7 @@ asset_index:
     main.section-intro.name: "第一章：fork 安裝與瀏覽版本"
     main.section-create-commits.name: "第二章：建立版本歷史與檔案狀態"
     main.section-elaborate-commits.name: "第三章：保存的版本的性質"
+    main.section-advanced-history-browsing: "第四張：進階瀏覽版本歷史與回溯版本"
 
   # level names of section one
     main.intro-install.name: "1-1 節：安裝"
@@ -25,6 +26,10 @@ asset_index:
     main.commit-properties.name: "3-1 節：總覽變更版本資料"
     main.commit-backtrace.name: "3-2 節：變更版本構成歷史"
     main.commit-diff.name: "3-3 節：觀察變更版本之間的差異"
+
+  # level names of section four
+    main.checkout-file.name: "回溯檔案到特定版本"
+
   ondisk:
   # level configs of section one: intro
     intro-install: "intro-install.yaml"
@@ -45,4 +50,7 @@ asset_index:
     commit-properties: "commit-properties.yaml"
     commit-backtrace: "commit-backtrace.yaml"
     commit-diff: "commit-diff.yaml"
-    
+
+  # level configs of section four: advanced history browsing
+    checkout-file: "checkout-file.yaml"
+  
