--- a/example/course-resources/fork/images-index.yaml
+++ b/example/course-resources/fork/images-index.yaml
@@ -103,5 +103,6 @@ asset_index:
     illustrate-view-commit-diff-gui: checkout-file@illustrate-view-commit-diff-gui.png
     instruct-checkout-file-at-specific-commit-1: checkout-file@instruct-checkout-file-at-specific-commit-1.png
     instruct-checkout-file-at-specific-commit-2: checkout-file@instruct-checkout-file-at-specific-commit-2.png
-    instruct-seek-out-staged-unstaged-after-checkout-file-2: illusrate-staged-unstaged-after-checkout-fileinstruct-seek-out-staged-unstaged-after-checkout-file-2.png
-    illusrate-staged-unstaged-after-checkout-file: illusrate-staged-unstaged-after-checkout-fileillusrate-staged-unstaged-after-checkout-file.png
+    instruct-seek-out-staged-unstaged-after-checkout-file-2: checkout-file@illusrate-staged-unstaged-after-checkout-fileinstruct-seek-out-staged-unstaged-after-checkout-file-2.png
+    illusrate-staged-unstaged-after-checkout-file: checkout-file@illusrate-staged-unstaged-after-checkout-file.png
+    instruct-checkout-file-before-specific-commit: checkout-file@instruct-checkout-file-before-specific-commit.png
