Add new level: file-checkout-combo

--- a/example/course-resources/fork/levels-index.yaml
+++ b/example/course-resources/fork/levels-index.yaml
@@ -30,6 +30,7 @@ asset_index:
   # level names of section four
     main.checkout-file.name: "回溯檔案到特定版本"
     main.file-history.name: "單一檔案的版本歷史"
+    main.file-checkout-combo.name: "組合技－－回溯檔案到其版本歷史上的特定版"
 
   ondisk:
   # level configs of section one: intro
@@ -55,3 +56,4 @@ asset_index:
   # level configs of section four: advanced history browsing
     checkout-file: "checkout-file.yaml"
     file-history: "file-history.yaml"
+    file-checkout-combo: "file-checkout-combo.yaml"
