--- a/example/course-resources/fork/level-data/file-history-index.yaml
+++ b/example/course-resources/fork/level-data/file-history-index.yaml
@@ -59,7 +59,7 @@ asset_index:
 
       從檔案歷史可以看出來，這個檔案的版本繁多  
       假設我們想要回溯到某一版剛剛增加了「8. 黑色追緝令」這一行  
-      請問這一版會是從下數上來的第幾版呢？  
+      請問這一版會是從上往下數的第幾版呢？  
 
       1. 第一版
       2. 第三版
