--- a/example/course-resources/fork/levels/commit-properties.yaml
+++ b/example/course-resources/fork/levels/commit-properties.yaml
@@ -59,6 +59,9 @@
         - !dev.act.git 
           repoSetupName: commits-advanced 
           arguments: [ "commit", "-m", "$level-data/commit-properties/add-other-files-message" ]
+        - !dev.act.git 
+          repoSetupName: commits-advanced
+          arguments: [ "tag", "file-3-v1" ]
 
       # proper message (file-1(3) and file-4(2))
         - !act.writeFile 
@@ -173,7 +176,7 @@
         - *stageAll
         - !dev.act.git 
           repoSetupName: commits-advanced 
-          arguments: [ "commit", "-m", "$level-data/commit-properties/change-4-message" ]
+          arguments: [ "commit", "-m", "$level-data/commit-properties/end-message" ]
 
 
       # save reference to init
