--- a/example/course-resources/fork/level-data/commit-properties-index.yaml
+++ b/example/course-resources/fork/level-data/commit-properties-index.yaml
@@ -298,7 +298,7 @@ asset_index:
     diff2-message: "查看變化 2"
     diff3-message: "查看變化 3"
     add-other-files-message: "加入圈圈叉叉和電影清單"
-    change-1-message: "修改"
+    change-1-message: "中央突破"
     change-2-message: "修改"
     change-3-message: "修改"
     change-4-message: "修改"
