--- a/example/course-resources/fork/levels/intro-open-repository.yaml
+++ b/example/course-resources/fork/levels/intro-open-repository.yaml
@@ -3,6 +3,7 @@
     basic:
       workingPath: basic
       referenceStoreName: basic-operation
+      checkpointStoreName: basic-operation-checkpoints
   steps:
   # build basic operation repo
     - !dev.devAction 
