--- a/example/course-resources/fork/st-index.yaml
+++ b/example/course-resources/fork/st-index.yaml
@@ -18,3 +18,4 @@ asset_index:
     copy-commit-hash: "Copy Commit SHA (複製變更版本的特徵碼)"
     toolbar-view: "View (檢視...)"
     view-show-head: "Show HEAD (顯示工作中版本)"
+    create-branch: "Create New Branch...(建立新分支...)"
